--- a/index.html
+++ b/index.html
@@ -6,43 +6,39 @@
     <title>My Awesome Company Contact Page</title>
   </head>
   <body>
-
     <h1>Company Inc.</h1>
     <h2>For all your incorporated company needs</h2>
-
     <!-- First, create a form tag where our inputs will be nested -->
-
-
+    <form>
       <!-- Add a label for 'fullname'-->
-
+      <label for="fullname">Full Name</label>
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-
+      <input id="fullname=" name="fullname" type="text" placeholder="Enter Name" required>
 
       <!-- Add a label for 'email'-->
-
+      <label for="email">Email</label>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-
+      <input id="email" name="email_address" type="email" placeholder="Enter Email" required>
 
       <!-- Add a label for 'phone'-->
-
+      <label for="phone">Phone</label>
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-
+      <input id="phone" name="phone" type="tel" placeholder="Enter Telephone (optional)">
 
       <!-- Add a label for 'message'-->
-
+      <label for="message">Message</label>
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-
+      <textarea id="message" name="message" rows="10" cols="30" placeholder="Enter Message"></textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-
-
+      <input type="checkbox" id="checkbox" name="customer" value="Existing Customer">
 
       <!-- Add an input with the type set to 'submit' -->
-
-    
+      <input type="submit" value="Submit">
+    </form>
   </body>
 </html>
