--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
       <label for="message">Message</label>
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-      <textarea id="message" name="message" rows="10" cols="30" placeholder="Enter Message"></textarea>
+      <textarea id="message" name="message" rows="10" cols="20" placeholder="Enter Message"></textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
+      <label for="checkbox">Existing Customer</label>
       <input type="checkbox" id="checkbox" name="customer" value="Existing Customer">
 
       <!-- Add an input with the type set to 'submit' -->
